--- a/public/main.css
+++ b/public/main.css
@@ -175,8 +175,42 @@ nav ul li a:hover{
     border: 1px solid black;
     border-radius: 4px;
 }
-
-
+.banner img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+.slick-prev{
+    position: absolute!important;
+    left: 20px!important;
+    z-index: 100;
+}
+.slick-next{
+    position: absolute!important;
+    right: 20px!important;
+    z-index: 100;
+}
+.slick-dots li button:before{
+    content: ''!important;
+    background-color: aliceblue!important;
+    top: -30px!important;
+    height: 10px!important;
+}
+.pag a{
+    color: #1cc71c;
+}
+body::-webkit-scrollbar {
+    width: 12px;
+  }
+  body::-webkit-scrollbar-track {
+    background: rgb(27, 27, 27);
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    border: 1px solid rgb(129, 11, 11);
+  }
 @media (max-width:750px) {
     header{
         flex-direction: column;
